CSS makes things visible, or not. Display the nascent MFHD fixed-field editor.
git-svn-id: svn://svn.open-ils.org/ILS/trunk@16933 dcc99617-32d9-48b4-a31d-7c20da2025e4

--- a/Open-ILS/xul/staff_client/server/cat/marcedit.css
+++ b/Open-ILS/xul/staff_client/server/cat/marcedit.css
@@ -95,4 +95,8 @@ grid#leaderGrid[type="COM"] *[set~="COM"], grid#leaderGrid[type="COM"] *[set~="C
     visibility: visible;
 }
 
+grid#leaderGrid[type="MFHD"] *[set~="MFHD"], grid#leaderGrid[type="MFHD"] *[set~="MFHD"] + textbox {
+    visibility: visible;
+}
+
 grid[name="-none-"] * label { color: black; }
